# awpak-rs

./: Cargo.toml  README.md
awpak-rs/: CHANGELOG.md  Cargo.toml
awpak-rs-macros/: Cargo.toml  README.md
awpak-rs-macros/src/: lib.rs
awpak-rs-macros/src/impls/: awpak_main.rs  config_file.rs  from_value.rs  middleware.rs  mod.rs  redirect_to.rs  set_status_code.rs
awpak-rs-macros/src/impls/methods/: connect.rs  delete.rs  get.rs  head.rs  methods.rs  mod.rs  options.rs  patch.rs  post.rs  put.rs  trace.rs
awpak-rs-macros/src/util/: utils.rs
awpak-rs-test/: .gitignore  Cargo.toml  test.sh
awpak-rs-test/src/: config_files.rs  context.rs  cookies.rs  headers.rs  main.rs  middlewares.rs  path_variables.rs  query_param.rs  redirects.rs  status_code.rs
awpak-rs-test/tests/: test_config_files.rs  test_content_negotiation.rs  test_content_type.rs  test_cookies.rs  test_get.rs  test_get_2.rs  test_headers.rs  test_multipart_data.rs  test_multipart_files.rs  test_multipart_json.rs  test_path_variables.rs  test_post.rs  test_post_2.rs  test_post_params.rs  test_query_param.rs  test_redirects.rs  test_status_code.rs  util.rs
awpak-rs-test/tests/features/: test_config_files.feature  test_content_negotiation.feature  test_content_type.feature  test_cookies.feature  test_get.feature  test_get_2.feature  test_headers.feature  test_multipart_data.feature  test_multipart_files.feature  test_multipart_json.feature  test_path_variables.feature  test_post.feature  test_post_2.feature  test_post_params.feature  test_query_param.feature  test_redirects.feature  test_status_code.feature
awpak-rs-test/tests/files/config/: config_1.json  config_2.json  config_3.json
awpak-rs/benches/: execute_middlewares.rs
awpak-rs/src/: lib.rs
awpak-rs/src/body/: body.rs
awpak-rs/src/config_data/config_file/: config_file.rs
awpak-rs/src/config_data/home/: home.rs
awpak-rs/src/endpoint/: endpoint.rs  types.rs
awpak-rs/src/error/: error.rs
awpak-rs/src/io/: io.rs  mod.rs  util.rs
awpak-rs/src/io/cookies/: cookies.rs
awpak-rs/src/io/headers/: header_data.rs  headers.rs  mime.rs  mod.rs
awpak-rs/src/io/request/: mod.rs  request_body.rs  request_data.rs
awpak-rs/src/io/response/: response_data.rs
awpak-rs/src/parser/: mod.rs  parser.rs
awpak-rs/src/parser/from_async_str/: from_async_str.rs  mod.rs
awpak-rs/src/parser/from_value/: from_value.rs  from_value_for_from_str.rs  from_value_for_option.rs  from_value_for_string.rs  from_value_for_vec.rs  mod.rs
awpak-rs/src/parser/json/: json_parser.rs
awpak-rs/src/parser/text/: mod.rs  text_parser.rs
awpak-rs/src/server/: server.rs
awpak-rs/src/services/: error.rs  main_service.rs  mod.rs
awpak-rs/src/services/endpoint/: endpoint_executor.rs  mod.rs
awpak-rs/src/services/middleware/: middleware.rs
awpak-rs/src/services/request/: mod.rs  multipart.rs  service_request.rs
awpak-rs/src/services/response/: mod.rs  service_response.rs
awpak-rs/src/util/: file_utils.rs  mod.rs  signals_utils.rs  url_utils.rs
